Support msg duplication for all msg types